re PR c++/54325 (C++11 uniform initialization syntax for argument-less abstract base class constructor fails)

PR c++/54325
	* tree.c (build_aggr_init_expr): Don't check for abstract class.

From-SVN: r194284